2014-10-21  Karl Berry  <karl@gnu.org>

	* tp/texi2any.pl (makeinfo_help),
	* doc/texinfo.texi (@t{texi2any} Printed Output): mention
	that texi2any parse the input purely for error-checking purposes
	before handing off to texi2dvi.
	Suggestion from Ken Brown18 Oct 2014 13:58:38.

2014-10-19  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Parser.pm (_parse_def): on @def* lines, consider 
	@-commands and text not separated by space to be a single 
	word.  From Werner LEMBERG (http://savannah.gnu.org/bugs/?43406).

2014-10-16  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Plaintext.pm (_convert): with @w and @tie,
	do not set set_space_protection ignore_column argument, such 
	that the whole block goes to the next line.  Report from
	Werner LEMBERG (http://savannah.gnu.org/bugs/?43407) and Mahlon 
	Smith.

2014-10-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/empty.sh: New test.

2014-10-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes): FILE_BUFFER argument removed.
	<--usage>: Display an error meesage if there is no node to give 
	a file to look for an invocation node.
	(initial_fb): Variable removed.

	* info/info.c (info_short_help),
	* doc/info-stnd.texi (Invoking Info): Document "info 
	'(file)node'" invocation.
	* doc/info-stnd.texi (Invoking Info): Refer to "search path" 
	instead of "INFOPATH".
	(Node Commands): Add "vi-like operation" for a binding.

2014-10-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (get_initial_file) <file name lookup>,
	(main) <--file>, <'(file)node' as first argument>: Add a node to 
	ref_list from the file we found.
	(add_initial_nodes): Don't fall back to a "Top" node as it 
	should already be in ref_list.  If any "--node" argument given, 
	discard the first element of ref_list.

	* info/info-utils.c (info_new_reference): Duplicate arguments 
	into new storage.  All callers updated.

2014-10-13  Gavin Smith  <gavinsmith0123@gmail.com>
